# kish

./: .gitmodules  CMakeLists.txt  CommandExpander.cpp  CommandExpander.h  Global.cpp  Global.h  Parser.cpp  Parser.h  README.md  Token.h  Tokenizer.cpp  Tokenizer.h  WordExpander.cpp  WordExpander.h  builtins.cpp  builtins.h  completion.cpp  completion.h  executor.cpp  executor.h  highlight.cpp  highlight.h  job_control.cpp  job_control.h  main.cpp  repl.cpp  repl.h  utils.cpp  utils.h
builtins/: cd.cpp  cd.h  colon.cpp  colon.h  echo.cpp  echo.h  false.cpp  false.h  help.cpp  help.h  read.cpp  read.h  source.cpp  source.h  true.cpp  true.h
test/: tests.sh
